--- a/src/Components/NoteList/styles.module.css
+++ b/src/Components/NoteList/styles.module.css
@@ -1,7 +1,13 @@
-.card{
+.card {
     width: 40rem;
-    height: 8rem;
+    min-height: 8rem;
     border-radius: 1rem;
     box-shadow: rgba(12, 12, 12, 0.35) 0px 5px 15px;
-    margin: 4px 0;
+    margin: 6px 0;
+}
+
+@media screen and (max-width:620px) {
+    .card {
+        width: 20rem;
+    }
 }
